# internal/serve/httphandler/account_handler.go
@@ -66,7 +66,7 @@ func (h AccountHandler) DeregisterAccount(w http.ResponseWriter, r *http.Request
 type SponsorAccountCreationOptions struct {
 	Address            string            `json:"address"                        validate:"required,public_key"`
 	Signers            []entities.Signer `json:"signers"                        validate:"required,gt=0,dive"`
-	MasterSignerWeight *int              `json:"master_signer_weight,omitempty" validate:"omitempty,gt=0"`
+	MasterSignerWeight *int              `json:"masterSignerWeight,omitempty" validate:"omitempty,gt=0"`
 	Assets             []entities.Asset  `json:"assets"                         validate:"dive"`
 }
 
